@@ -2533,6 +2533,7 @@ DRIVER(grgar,l1ff)      //          11/79 W Gorgar (L-1 Free Play Fix)
 DRIVER(grgar,t1)        //                  Gorgar (T-1 /10 Scoring Ted Estes)
 DRIVER(grgar,t1ff)      //                  Gorgar (T-1 /10 Scoring Ted Estes, Free Play Fix)
 DRIVER(grgar,c1)        //                  Gorgar (C-1 Lane Change MOD)
+DRIVER(grgar,l2)        //          ??/79 W Gorgar (L-2)
 DRIVER(lzbal,l2)        //S6-493:   12/79 W Laser Ball (L-2)
 DRIVER(lzbal,l2ff)      //          12/79 W Laser Ball (L-2 Free Play Fix)
 DRIVER(lzbal,l2sp)      //                  Laser Ball (L-2, PROM sound)
