@@ -27,6 +27,7 @@ Clones:
 Bad Cats LF-1 (French)
 Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
 Cue Ball Wizard (Spanish / Vifico license)
+Gorgar L-2 (unreleased so far, makes it the newest version available)
 High Speed (G-4 aka German PROTO4)
 Soccer Kings (alternate set 2)
 Super Mario Bros. (Spanish / Vifico license) (rev.1 and (most likely) rev.2)
